# orbgl

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
assets/: tiger.txt
examples/: complex.rs  rectangles.rs  simple.rs
examples/web/: Cargo.toml
examples/web/rectangle/src/: main.rs
examples/web/simple/: Cargo.toml
examples/web/simple/src/: main.rs
examples/web/simple/static/: index.html
orbgl/: Cargo.toml  README.md
orbgl/examples/: complex.rs  images.rs  minimal.rs  rectangles.rs  simple.rs
orbgl/examples/web/rectangle/: Cargo.toml
orbgl/src/: lib.rs  prelude.rs
orbgl/src/api/canvas/: mod.rs
orbgl/src/render_engine/: mod.rs  render_engine.rs
orbgl/src/render_engine/cairo/: cairo_render_engine.rs  canvas_paint_state.rs  canvaspaintstate.rs  mod.rs
orbgl/src/render_engine/orbgl/: canvas_paint_state.rs  canvaspaintstate.rs  edge.rs  matrix.rs  mod.rs  orbgl_render_engine.rs  pathbuilder.rs
orbgl/src/surface/: framebuffer_surface.rs  image_surface.rs  mod.rs  surface.rs
orbgl_api/: Cargo.toml  README.md
orbgl_api/src/: canvas.rs  color.rs  font.rs  image.rs  lib.rs  orbclient_color.rs  orbfont_font.rs  prelude.rs  render_engine.rs  surface.rs
orbgl_shapes/: Cargo.toml  README.md
orbgl_shapes/examples/: minimal.rs
orbgl_shapes/examples/web/minimal/: Cargo.toml
orbgl_shapes/examples/web/minimal/src/: main.rs
orbgl_shapes/examples/web/minimal/static/: index.html
orbgl_shapes/src/: lib.rs  prelude.rs  shape_renderer.rs
orbgl_shapes/src/shapes/: image_element.rs  mod.rs  path_segment.rs  rectangle.rs
orbgl_shapes/src/shapes/tests/: image_element.rs  rectangle.rs
orbgl_shapes/src/structs/: border.rs  brush.rs  mod.rs
orbgl_shapes/src/structs/tests/: border.rs
orbgl_web/: Cargo.toml  README.md
orbgl_web/examples/: Cargo.toml
orbgl_web/examples/minimal/: Cargo.toml
orbgl_web/examples/minimal/src/: main.rs
orbgl_web/examples/minimal/static/: index.html
orbgl_web/examples/rectangles/: Cargo.toml
orbgl_web/examples/rectangles/src/: main.rs
orbgl_web/examples/rectangles/static/: index.html
orbgl_web/examples/simple/: Cargo.toml
orbgl_web/examples/simple/src/: main.rs
orbgl_web/src/: lib.rs  prelude.rs  web_render_engine.rs  web_surface.rs
src/: lib.rs
src/api/: color.rs  mod.rs
src/api/canvas/: canvas.rs
src/canvas/: canvas.rs  canvaspaintstate.rs  edge.rs  matrix.rs  pathbuilder.rs  point.rs
src/render_engine/: mod.rs  render_engine.rs
src/render_engine/cairo/: cairo_render_engine.rs  canvaspaintstate.rs  mod.rs
src/render_engine/orbgl/: canvaspaintstate.rs  mod.rs  orbgl_render_engine.rs  point.rs
src/render_engine/web/: mod.rs  web_render_engine.rs
src/surface/: framebuffer_surface.rs  image_surface.rs  mod.rs  surface.rs
