[package]
name = "orbgl"
version = "0.1.0"
authors = ["Michael Hölzl <FlowPX2@gmail.com>"]

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
orbclient = "*"
rust-cairo = { git = "https://gitlab.redox-os.org/redox-os/rust-cairo.git" }
orbimage = "0.1.16"