[package]
name = "orbgl_api"
version = "0.1.0"
authors = ["Michael Hölzl <FlowPX2@gmail.com>"]
description = "Base API for the Orbital Graphics Library (OrbGL)."
repository = "https://gitlab.redox-os.org/redox-os/orbgl"
readme = "README.md"
license = "MIT"
keywords = [
    "orbital",
    "redox",
    "ui",
    "graphics", 
    "2d", 
    "3D",
    "ui",
]
categories = ["Graphics APIs"]
edition = "2018"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4.17"

# todo: could be removed after orbgl api is providing its own image, color and font strcut
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
orbclient = "0.3.22"
orbimage = "0.1.17"
orbfont = "0.1.8"